src/test/ui/lifetime-errors/ex3-both-anon-regions-return-type-is-anon.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/ex3-both-anon-regions-return-type-is-anon.rs:17:5
   |
17 |     x
   |     ^
   |
note: ...the reference is valid for the anonymous lifetime #1 defined on the method body at 16:3...
  --> $DIR/ex3-both-anon-regions-return-type-is-anon.rs:16:3
   |
16 | /   fn foo<'a>(&self, x: &i32) -> &i32 {
17 | |     x
18 | |   }
   | |___^
note: ...but the borrowed content is only valid for the anonymous lifetime #2 defined on the method body at 16:3
  --> $DIR/ex3-both-anon-regions-return-type-is-anon.rs:16:3
   |
16 | /   fn foo<'a>(&self, x: &i32) -> &i32 {
17 | |     x
18 | |   }
   | |___^

error: aborting due to previous error

